--- a/index.html
+++ b/index.html
@@ -1,24 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sistema de Chamados</title>
-    <meta name="description" content="Sistema moderno de gerenciamento de chamados para TI corporativo" />
+    <meta
+      name="description"
+      content="Sistema moderno de gerenciamento de chamados para TI corporativo"
+    />
     <meta name="author" content="Sistema de Chamados" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="../ticket-hero-80/public/icone.png"
+    />
 
     <meta property="og:title" content="Sistema de Chamados" />
-    <meta property="og:description" content="Sistema moderno de gerenciamento de chamados para TI corporativo" />
+    <meta
+      property="og:description"
+      content="Sistema moderno de gerenciamento de chamados para TI corporativo"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
