--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
       content="Sistema moderno de gerenciamento de chamados para TI corporativo"
     />
     <meta name="author" content="Sistema de Chamados" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="../ticket-hero-80/public/icone.png"
-    />
+    <link rel="icon" type="image/png" href="/icone.png" />
 
     <meta property="og:title" content="Sistema de Chamados" />
     <meta
